turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:14: error: ')' expected but ';' found.
			setCouleurBrosse(colors(place(x,colors)); baisseBrosse(); leveBrosse(); droite();avance()
                                                                ^LangtonsAnt:16: error: ')' expected but ';' found.
			setCouleurBrosse(colors(place(x,colors)); baisseBrosse(); leveBrosse(); gauche();avance()
                                                                ^LangtonsAnt:18: error: ')' expected but '}' found.
}
^